# rust-practice

./: .gitignore  LICENSE  README.md
calculator/src/: lexing.rs  main.rs  stack.rs  unit.rs
count-vowels/: Cargo.toml
count-vowels/src/: main.rs
factorial/src/: main.rs
fibonacci-sequence/: Cargo.toml
fibonacci-sequence/src/: main.rs
prime-before-n/: Cargo.toml
prime-before-n/src/: main.rs
reverse-string/src/: main.rs
wgpu-beginner/: Cargo.toml
wgpu-beginner/src/: challenge.wgsl  main.rs  shader.wgsl
wgpu-beginner/wgpu-buffer-challenge/: Cargo.toml
wgpu-buffer-challenge/src/: main.rs
wgpu-texture-challenge/: Cargo.toml
wgpu-texture-challenge/src/: main.rs  texture.rs
