[package]
name = "wgpu-buffer-challenge"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
wgpu = "^0.12.0"
bytemuck = { version = "^1.4", features = ["derive"] }
winit = "^0.26"

image = "^0.23"
cgmath = "^0.18"
env_logger = "^0.9"
log = "^0.4"
pollster = "^0.2"
